<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="General"
        app:iconSpaceReserved="false">

        <ListPreference
            android:defaultValue="1"
            app:iconSpaceReserved="false"
            android:dialogTitle="@string/title_gallery_storage"
            android:entries="@array/size_multiplier_keys"
            android:entryValues="@array/size_multiplier_values"
            android:key="@string/key_gallery_name"
            android:summary="@string/default_gallery_storage"
            android:title="@string/title_gallery_storage" />


        <ListPreference
            android:defaultValue="3"
            app:iconSpaceReserved="false"
            android:dialogTitle="@string/title_upload_quality"
            android:entries="@array/pref_upload_quality_entries"
            android:entryValues="@array/pref_upload_quality_values"
            android:key="@string/key_upload_quality"
            android:summary="@string/summary_upload_video_quality"
            android:title="@string/title_upload_quality" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_notifications"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            android:key="@string/notifications_new_message"
            android:title="@string/title_new_notification_sound" />


        <SwitchPreference
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            android:key="@string/key_vibrate"
            android:summary="@string/summary_vibrate"
            android:title="@string/title_vibrate" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about"
        app:iconSpaceReserved="false">

        <Preference
            android:selectable="false"
            app:iconSpaceReserved="false"
            android:summary="@string/summary_about" />

        <Preference
            android:summary="@string/app_version"
            app:iconSpaceReserved="false"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_send_feedback"
            app:iconSpaceReserved="false"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />

        <!-- preference opens url in browser -->
        <Preference
            android:summary="@string/summary_faq"
            app:iconSpaceReserved="false"
            android:title="@string/title_faq">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_faq" />
        </Preference>

        <Preference android:title="@string/privacy_policy"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_privacy" />
        </Preference>

        <Preference android:title="@string/title_terms"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_terms" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>