<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.mancj.materialsearchbar.MaterialSearchBar
                android:id="@+id/searchBar"
                style="@style/MaterialSearchBarLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:mt_hint="@string/find_your_books_here"
                app:mt_maxSuggestionsCount="10"
                app:mt_speechMode="false" />


    <TextView
        android:id="@+id/exp_txt_01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/explore_text_exp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="sans-serif-light"
        android:paddingStart="5dp"
        android:textStyle="bold"
        android:text="@string/explore_text_01"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="1.0" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/books_cate1"
        layout="@layout/div_books_tabular_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:numColumns="auto_fit" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:paddingStart="5dp"
                android:text="@string/explore_text_02"
                android:textStyle="bold"
                android:textSize="16sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/books_cate2"
                layout="@layout/div_books_tabular_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                tools:layout_editor_absoluteX="-4dp" />




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:paddingStart="5dp"
                android:text="@string/explore_text_03"
                android:textStyle="bold"
                android:textSize="16sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/books_cate3"
                layout="@layout/div_books_tabular_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                tools:layout_editor_absoluteX="-4dp" />




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:paddingStart="5dp"
                android:text="@string/explore_text_04"
                android:textStyle="bold"
                android:textSize="16sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/books_cate4"
                layout="@layout/div_books_tabular_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                tools:layout_editor_absoluteX="-4dp" />





            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:paddingStart="5dp"
                android:text="@string/explore_text_05"
                android:textStyle="bold"
                android:textSize="16sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/books_cate5"
                layout="@layout/div_books_tabular_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                tools:layout_editor_absoluteX="-4dp" />





            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:paddingStart="5dp"
                android:text="@string/explore_text_06"
                android:textStyle="bold"
                android:textSize="16sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/books_cate6"
                layout="@layout/div_books_tabular_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                tools:layout_editor_absoluteX="-4dp" />

</LinearLayout>
    </ScrollView>
</RelativeLayout>